--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo.png
+      - assets/images/logo.png
+      - assets/icons/logo_whatsapp.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
