--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^14.3.0
-  go_router_builder: ^2.7.1
   logger: ^2.4.0
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
